Add tests for Python 3.6 and Python 3.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ env:
   - TOXENV=py27
   - TOXENV=py34
   - TOXENV=py35
+  - TOXENV=py36
+  - TOXENV=py37
 
-install: pip install requests nose-parameterized
+install: pip install requests nose nose-parameterized
 
 script: nosetests
 
