--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,14 @@
-[tox]
-envlist = py{27,34,35}
-
 [testenv]
-basepython =
-    py27: python2.7
-    py34: python3.4
-    py35: python3.5
 deps =
-    check-manifest
-    {py27,py34,py35}: readme_renderer
     flake8
-    nose
+    docutils
+    Pygments
+    pytest
 commands =
-    check-manifest --ignore tox.ini,tests*
-    {py27,py34,py35}: python setup.py check -m -r -s
+    python setup.py check -m -r -s
     flake8 .
-    nosetests
+    pytest
 
 [flake8]
-exclude = .tox,*.egg,build,data
+exclude = .tox,*.egg,build,data,*docs
 select = E,W,F
